fix(datasearch): 修复视频提供者解析 bug 并 P3C 合规化
- subhd 字幕提供器：API 404 自动降级 HTML 抓取，修正 fallback 正则命中侧栏问题

- quark/quarktv/duanjuw/ikantv：加站点失效快速检测（SPA 壳页/403/死域），不再返回导航链接占位

- muou/wuji：已封禁站点 checkBlocked 直接跳过，避免 67s 级代理长等待；muou 补 IOException（RST_STREAM）封禁标记

- wanou：非 JSON 响应（403 HTML）快速失败并归一预览文本，消除 NPE 隐患

- VideoProviderRegistry：BlockedEntry 增加 note 字段（原 JSON 解析炸裂根因），静态块自动加载封禁名单

- META-INF SPI：清理 4 个已删类引用，补全 8 个漏注册提供者；新增 blocked-providers.json（6 条封禁）

- P3C：中文注释/常量提取/集合容量/Javadoc 完整/消除全限定名与魔法值；删除 src/test 下 VideoProviderTest（迁至 example-starter Example）